Version compat with JDK >7